# py-click

./: README.md  demo-file  pyproject.toml  verify.sh
py_click/: clicky.py
