[tool.poetry]
name = "py-click"
version = "0.1.0"
description = ""
authors = ["Markus Meier <markus.d.meier@gmail.com>"]
readme = "README.md"
packages = [{include = "py_click"}]

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
